extended scheduler to store the status of current task in system and also show alert based on the status

--- a/dhis-2/pom.xml
+++ b/dhis-2/pom.xml
@@ -30,6 +30,7 @@
     <module>dhis-api</module>
     <module>dhis-services</module>
     <module>dhis-support</module>
+    <module>dhis-web</module>
   </modules>
 
   <licenses>
