[Sultan / Aamer] #823 - now, on scheduling page if user clicks sync now, user will be informed if metadata sync is running already. Metadata Sync's sync now button in scheduling is accessible even without enabling metadata sync schedule.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
@@ -397,3 +397,5 @@ invalid_category_combos=Invalid category combinations
 legend_set=Legend Set
 reload_apps=Reload apps
 program_indicator=Program Indicator
+metadata_sync_in_progress=Metadata Synchronization is in progress
+metadata_sync_has_started=Metadata Synchronization is started
