[Aamer | Anil] #372 - Extracting the common scheduling logic in common .vm file, Added dataSyncCron, Added minute and hour based crons to data sync

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
@@ -404,3 +404,5 @@ run_now=Run now
 program_notifications_scheduler=Program Notifications scheduler
 program_notifications_scheduling_strategy=Program Notifications scheduling strategy
 synchronize_now=Sync now
+Minute=Every Minute
+Hourly=Every Hour
