--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-dataadmin/src/main/resources/org/hisp/dhis/dataadmin/i18n_module.properties
@@ -369,7 +369,7 @@ data_synchronization=Data synchronization
 metadata_synchronization=Metadata Synchronization
 data_synchronization_strategy=Data synchronization strategy
 metadata_synchronization_strategy=Metadata synchronization strategy
-metadata_sync_scheduler_alert=To enable automated metadata synchronisation, please select when it should occur.
+sync_scheduler_alert=To enable automated synchronisation, please select when it should occur.
 sms_scheduler_strategy= SMS Scheduler Strategy
 sms_scheduler=SMS Scheduler
 enabled=Enabled
